--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -14,7 +14,7 @@ bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 bOffsetPlayerGamepadIds=False
-GameInstanceClass=/Script/Engine.GameInstance
+GameInstanceClass=/Script/PPP.PPPGameInstance
 GameDefaultMap=/Game/PPP/Maps/Main.Main
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/PPP/Blueprint/GM_PPP.GM_PPP_C
