--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -7,7 +7,7 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/PPP/Maps/Main.Main
+EditorStartupMap=/Game/PPP/Maps/TestGridPreSpawn.TestGridPreSpawn
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
@@ -15,7 +15,7 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/PPP.PPPGameInstance
-GameDefaultMap=/Game/PPP/Maps/Main.Main
+GameDefaultMap=/Game/PPP/Maps/TestGridPreSpawn.TestGridPreSpawn
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/PPP/Blueprint/GM_PPP.GM_PPP_C
 GlobalDefaultServerGameMode=None
@@ -137,5 +137,3 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
-
